# cocomo-py

./: README.md  pyproject.toml
examples/: usage_example.py
src/cocomo/: main.py
src/cocomo_cli/: code_analyze.py  main.py
src/cocomo_py/: __init__.py  analyzer.py  calculator.py  cli.py  constants.py  models.py
src/cocomopy/: cocomo_calculator.py  main.py
tests/: test_calculator.py
