# Metadados do projeto (substitui a maior parte do setup.py)
[project]
name = "cocomo-cli"
version = "1.0.0"
authors = [
  { name="Alexandre Cury Lima", email="alexandrecurylima@gmail.com" },
]
description = "Uma ferramenta CLI para estimar o custo de software usando o modelo COCOMO."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["Cocomo", "CLI", "Software"]
dependencies = [
    "typer>=0.19.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
homepage = "https://github.com/holynacll/cocomo-cli"
repository = "https://github.com/holynacll/cocomo-cli"
issues = "https://github.com/holynacll/cocomo-cli/issues"

[project.scripts]
cocomo = "cocomo_cli.main:app"
