[project]
name = "cocomo-py"
version = "0.2.0"
authors = [
  { name="Alexandre Cury Lima", email="alexandrecurylima@gmail.com" },
]
description = "A CLI tool to estimate software cost using the COCOMO model."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["Cocomo", "CLI", "Library", "Software", "Cost", "Estimation"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
homepage = "https://github.com/holynacll/cocomo-py"
repository = "https://github.com/holynacll/cocomo-py"
issues = "https://github.com/holynacll/cocomo-py/issues"

[project.scripts]
cocomo = "cocomo_py.cli:app"

[project.optional-dependencies]
cli = [
    "typer>=0.19.2",
]
